<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.YourLunchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:theme="@style/AppTheme.AppBarOverlay">

            <ImageView
                android:id="@+id/restaurant_image2"
                android:scaleType="centerCrop"
                android:layout_height="@dimen/app_bar_height"
                android:fitsSystemWindows="true"
                android:layout_width="wrap_content"
                >
            </ImageView>


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">



            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/restaurant_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"

                    android:text="@string/your_restaurant"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:id="@+id/image_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_baseline_star_25"
                    android:visibility="invisible">

                </ImageView>


            </LinearLayout>


            <TextView
                android:id="@+id/restaurant_address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/french_restaurant_12_rue_machin_poissonni_re">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_phone_24"
                android:text="@string/call"
                android:textColor="#ff582a"

                >
            </Button>

            <Button
                android:id="@+id/star_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:drawableTop="@drawable/ic_baseline_star_24"
                android:text="@string/like"
                android:textColor="#ff582a"

                />

            <Button
                android:id="@+id/website_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_public_24"
                android:text="@string/website"
                android:textColor="#ff582a"

                >
            </Button>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#000000"
        app:backgroundTint="#ffffff"
        app:srcCompat="@drawable/ic_baseline_crop_din_24"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>